--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+Images files/*
+imagesfiles/*
+PetImages/*
